# inventree-ipn-generator

./: README.md  pyproject.toml
ipn_generator/: generator.py
ipn_generator/tests/: test_IPNGenerator.py
tools/: set_category_codes.py
