[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "inventree-ipn-generator"
version = "0.4.0"
description = "InvenTree plugin that automatically generates and assigns Internal Part Numbers to parts, with optional category-aware IPN generation from the part's category hierarchy"
authors = [
    {name = "Nichlas Walsøe", email = "lavissawow@gmail.com"}
]
maintainers = [
    {name = "Irshaad", email = "irshaad@plentify.co.za"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: InvenTree",
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/RobustBiscuit/inventree-ipn-generator"

[project.entry-points."inventree_plugins"]
IPNGenerator = 'ipn_generator.generator:AutoGenIPNPlugin'

[tool.ruff.lint]
ignore = [
    "E501",
    "W605"
]

[tool.flake8]
ignore = [
    "E501",
    "W605"
]
